plugins {
	id "java-library"
	id "maven-publish"
}

java {
	sourceCompatibility = '21'
}

repositories {
	mavenLocal()
	mavenCentral()
}

dependencies {
    implementation 'com.mytrading.utils:myutils:0.4'
    implementation 'org.slf4j:slf4j-api:2.0.17'
    implementation 'ch.qos.logback:logback-classic:1.5.21'
    compileOnly 'org.projectlombok:lombok:1.18.42'
	annotationProcessor 'org.projectlombok:lombok:1.18.42'

	testImplementation 'org.junit.jupiter:junit-jupiter:5.11.4'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
	useJUnitPlatform()
}

def sourceJar = tasks.register('sourceJar', Jar) {
	archiveClassifier.set('sources')
	from sourceSets.main.allJava
}

publishing {
	publications {
		create("mavenJava", MavenPublication) {
			groupId = 'com.vrtrading'
			artifactId = 'vr_trade_manager'
			version = '0.1'

			from components.java
			//artifact sourceJar
			artifact sourceJar.get()
		}
	}
}
